@@ -1,6 +1,3 @@
-WONTFIX for 7.20
-================
-
 - some of deprecated.h repeats stuff we do better in image.h, eg. addr()
   should just call IM_REGION_ADDR()
 
@@ -62,10 +59,6 @@ Actions:
 - check mosaic1, global_balance, similarity etc. use of im__affine
   
   how can we move them to im_affinei ?
-
-- make a "deprecated" package too
-
-- update the Portfiles on the mac and on the website from the macports ones
 
 - radiance read/write needs docs
 
